<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    tools:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_local_donacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="EL CANTARO" />

        <LinearLayout
            android:id="@+id/linearLayoutTitulo"
            style="@style/row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_local_donacion">

            <TextView
                style="@style/column"
                android:textStyle="bold"
                android:text="@string/horario" />

            <TextView
                style="@style/column"
                android:textStyle="bold"
                android:text="@string/direccion" />

        </LinearLayout>

        <LinearLayout
            style="@style/row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutTitulo">

            <TextView
                android:id="@+id/text_horario"
                style="@style/column_fill"
                tools:text="08:00 - 21:00" />

            <TextView
                android:id="@+id/text_direccion"
                style="@style/column_fill"
                tools:text="Av. Paraguay casi Mcal. Lopez 343" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/bottom_row"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_ver_mas"
                style="@style/buttonLink"
                android:text="@string/button_ver_mas" />

            <Button
                android:id="@+id/button_ir_maps"
                style="@style/buttonLink"
                android:text="@string/button_ir_en_maps" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>